fixed z-index of sidebar, added margin for summaryContainer

--- a/frontend/onied/src/components/blocks/summary/summary.module.css
+++ b/frontend/onied/src/components/blocks/summary/summary.module.css
@@ -2,6 +2,7 @@
     margin-top: 1rem;
     margin-left: 10%;
     margin-right: 10%;
+    margin-bottom: 5rem;
     width: fit-content;
     display: block;
     gap: 1rem;
